# clinical-trial-system

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: adverse_events.py  agents.py  budgets.py  health.py  ip.py  queries.py  reference.py  regulatory.py  reports.py  sites.py  studies.py  subjects.py  visits.py  webhooks.py
backend/app/connectors/: __init__.py  inbound_processors.py  integration_engine.py
backend/app/seeding/: __init__.py  data.py  loader.py
backend/tests/: conftest.py  test_adverse_events.py  test_agents.py  test_budgets.py  test_coverage_gaps.py  test_edge_cases.py  test_health.py  test_inbound_processors.py  test_integration_engine.py  test_ip.py  test_matrix_harness.py  test_queries.py  test_reference.py  test_regulatory.py  test_remaining_coverage.py  test_reports.py  test_seeding.py  test_sites.py  test_studies.py  test_subjects.py  test_visits.py  test_webhooks.py
docs/: AI_GOVERNANCE.md  DCB0160.md  PRIVACY.md  REGULATORY_ALIGNMENT.md  REQUIREMENTS.md  RESEARCH_FOUNDATION.md  SAFETY_CASE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: ctms.spec.ts
frontend/scripts/: sync-design-system.ps1
frontend/src/: App.test.tsx  App.tsx  index.css
tests/harness/: _bootstrap_matrices.py  _fix_filler_coverage.py  build_canonical_matrices.py  derived_nfrs.json  (+4 more)
(+23 files in other folders)
